Prevent large images and videos from overflowing container

--- a/less/style.less
+++ b/less/style.less
@@ -135,6 +135,12 @@ a:active, a:hover, a:focus {
 	}
 }
 
+.post-body {
+	img, video {
+		max-width: 100%;
+	}
+}
+
 .post-header h2:first-of-type {
 	.text-center;
 	
